@@ -792,12 +792,12 @@ This is the directory where Nagios should place log files that have been rotated
 </p>
 
 <p>
-This option determines whether or not Nagios will check the <a href="#command_file">command file</a> for internal commands it should execute.  This option must be enabled if you plan on using the <a href="cgis.html#command_cgi">command CGI</a> to issue commands via the web interface.  Third party programs can also issue commands to Nagios by writing to the command file, provided proper rights to the file have been granted as outlined in <a href="faqs.html#command_file_permissions">this FAQ</a>.  More information on external commands can be found <a href="extcommands.html">here</a>.
+This option determines whether or not Nagios will check the <a href="#command_file">command file</a> for  commands that should be executed.  This option must be enabled if you plan on using the <a href="cgis.html#command_cgi">command CGI</a> to issue commands via the web interface.  Third party programs can also issue commands to Nagios by writing to the command file, provided proper rights to the file have been granted as outlined in <a href="faqs.html#command_file_permissions">this FAQ</a>.  More information on external commands can be found <a href="extcommands.html">here</a>.
 </p>
 <p>
 <ul>
-<li>0 = Don't check external commands (default)
-<li>1 = Check external commands
+<li>0 = Don't check external commands
+<li>1 = Check external commands (default)
 </ul>
 </p>
 
