@@ -71,6 +71,8 @@ Pre-alpha changes since 02/15/2006...
        an external (regular) file.  Very useful for passive checks with long output or scripting.
      - Custom commands can now be submitted to Nagios.  Custom command names are prefixed with an underscore
        and are not processed internally by the Nagios daemon.  They may, however, be processed by NEB modules.
+     - External commands are now checked by default.  Nagios 2.x and earlier did not check for external commands
+       by default.
 
 * Status data changes:
      - Contact status information is now saved (although it is not processed by the old CGIs)
